--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "font-awesome": "^4.7.0",
     "framer-motion": "^11.18.0",
+    "lucide-react": "^0.474.0",
     "next": "^15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
