--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "font-awesome": "^4.7.0",
     "framer-motion": "^11.18.0",
     "lucide-react": "^0.474.0",
