--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "cookies-next": "^5.1.0",
     "font-awesome": "^4.7.0",
     "framer-motion": "^11.18.0",
     "lucide-react": "^0.474.0",
